# Multi-Agent_for_Calculation

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
api/: README.md  main.py
api/schems/: schemas.py
api/utils/: factory.py
dockers/: README.md
dockers/agent/: dockerfile
dockers/frontend/: dockerfile
dockers/tool_calculator/: dockerfile
frontend/: README.md  app.py  index.html  package.json
frontend/src/: App.jsx  main.jsx
service/: README.md
service/agents/: executor_agent.py  planner_agent.py
service/graph/: graph.py  nodes.py
service/infra/: llm_model.py  logger.py  observability.py  ollama_client.py
service/mcp_client/: client.py
service/prompts/: v1_executor.yaml  v1_planner.yaml
tool_calculator/: README.md  main.py
tool_calculator/schems/: schemas.py
tool_calculator/tool/: calculator.py
